# lima

./: CMakeLists.txt  CMakePresets.json  README.md  installation.txt
.github/workflows/: spack-ubuntu.yml
cmake/: FindHdf145.cmake  common.cmake  compilation_options.cmake  organization.cmake  python_binding.cmake  version.cmake  workarounds.cmake
configurations/: Ubuntu_GNU11.cmake  Ubuntu_GNU11_external_meshlibs.cmake  Ubuntu_GNU7.cmake  Ubuntu_GNU7_external_meshlibs.cmake  build.sh
src/: CMakeLists.txt
src/Comparaison_exe/: CMakeLists.txt  comparaison.cpp  io.h  mesh_test.cpp  mesh_test.h
src/Lima/: CMakeLists.txt  Doxyfile  apic.cpp  apif.cpp  apif3d.cpp  attribut.cpp  attribut_it.cpp  bras.cpp  bras_it.cpp  composition.cpp  groupe.cpp  hdf_helper.cpp  hdf_helper2.cpp  heptaedre_it.cpp  hexaedre_it.cpp  io_fortran.f90  ligne.cpp  ligne_it.cpp  liste_attribut.cpp  liste_fichier.cpp  maillage.cpp  maillage_it.cpp  malipp.cpp  malipp2.cpp  malipp2_factory.cpp  malipp_common.cpp  misc.cpp  myio.cpp  noeud.cpp  noeud_it.cpp  nuage.cpp  nuage_it.cpp  octoedre_it.cpp  point.cpp  polyedre.cpp  polyedre_it.cpp  polygone.cpp  polygone_it.cpp  prisme_it.cpp  pyramide_it.cpp  (+27 more)
src/Lima/cmake/: LimaConfig.cmake.in
src/Lima/public/Lima/: attribut.h  bras.h  callback.h  composition.h  config.h  enum.h  erreur.h  handle.h  ligne.h  lima++.h  lima.h  lima_types.h  liste_attribut.h  maillage.h  malipp.h  malipp2.h  noeud.h  non_defini.h  nuage.h  param_apif.h  polyedre.h  polygone.h  size.h  surface.h  vect2d.h  vect3d.h  version.h  volume.h
src/Lima/public/LimaP/: MutableString.h  algorithme.h  algorithme_t.h  allocation.h  allocation_t.h  attribut_it.h  attribut_type.h  attribut_type_t.h  bras_it.h  config_it.h  element_fini.h  element_maillage.h  ensemble.h  ensemble_t.h  enum_apif.h  file.h  filecpp.h  fonction.h  gibicastem.h  groupe.h  handle_t.h  hdf5_size.h  hdf_helper.h  hdf_helper2.h  heptaedre_it.h  hexaedre_it.h  io_fortran.h  ligne_it.h  lima_mt.h  lima_mt_t.h  liste.h  liste_fichier.h  liste_t.h  maillage_it.h  malipp2_factory.h  malipp_common.h  misc.h  myio.h  noeud_it.h  nuage_it.h  (+31 more)
src/LimaScripting/: CMakeLists.txt  LimaScripting.i
src/LimaScripting/cmake/: LimaScriptingConfig.cmake.in  LimaScriptingDistribution.h.in
src/Symetrise/: CMakeLists.txt  symetrise.cpp
src/Validation/: test_prepa.c  testx1.C  testx2.C  valid_change_att.f  valid_consult.f  valid_ecrit.f  valid_ecrit4prepa.f  valid_interne.C  valid_lecture.C  valid_modif.f  valid_prepa.f
src/Xlmlima_exe/: CMakeLists.txt  XlmLimaAction.cpp  XlmLimaAssistant.cpp  XlmLimaComparer.cpp  XlmLimaCopier.cpp  XlmLimaFactory.cpp  XlmLimaMetricSystem.cpp  XlmLimaQuantifier.cpp  xlmlima.cpp
src/Xlmlima_exe/cmake/: Xlmlima_exeConfig.cmake.in
src/Xlmlima_exe/protected/XlmLima/: XlmLimaAction.h  XlmLimaAssistant.h  XlmLimaComparer.h  XlmLimaCopier.h  XlmLimaException.h  XlmLimaFactory.h  XlmLimaMetricSystem.h  XlmLimaQuantifier.h  xlmlima_config.h
src/icemcfd/include/: bocolib.h  element.h  felem.h  header.h  topo.h
src/python/: compile_lima.py  essai.py  filtre.py
test_link/: CMakeLists.txt
test_link_cpp/: CMakeLists.txt  main.cpp  test.cpp
